--- a/packages/api-page-builder/tsconfig.json
+++ b/packages/api-page-builder/tsconfig.json
@@ -1,12 +1,29 @@
 {
   "extends": "../../tsconfig",
   "references": [
-    { "path": "../graphql" },
-    { "path": "../api-security" },
-    { "path": "../api-settings-manager" },
-    { "path": "../commodo" },
-    { "path": "../commodo-graphql" },
-    { "path": "../handler-ssr" },
-    { "path": "../validation" }
+    {
+      "path": "../graphql"
+    },
+    {
+      "path": "../api-security"
+    },
+    {
+      "path": "../api-settings-manager"
+    },
+    {
+      "path": "../commodo"
+    },
+    {
+      "path": "../commodo-graphql"
+    },
+    {
+      "path": "../handler-ssr"
+    },
+    {
+      "path": "../validation"
+    },
+    {
+      "path": "../api-i18n-content"
+    }
   ]
 }
