--- a/packages/api-i18n-content/tsconfig.build.json
+++ b/packages/api-i18n-content/tsconfig.build.json
@@ -5,7 +5,9 @@
     "node_modules",
     "./dist",
     "../graphql",
+    "../handler",
     "../api-security",
+    "../api-i18n"
   ],
   "compilerOptions": {
     "rootDir": "./src",
@@ -13,7 +15,17 @@
     "declarationDir": "./dist"
   },
   "references": [
-    { "path": "../graphql/tsconfig.build.json" },
-    { "path": "../api-security/tsconfig.build.json" }
+    {
+      "path": "../graphql/tsconfig.build.json"
+    },
+    {
+      "path": "../api-security/tsconfig.build.json"
+    },
+    {
+      "path": "../handler/tsconfig.build.json"
+    },
+    {
+      "path": "../api-i18n/tsconfig.build.json"
+    }
   ]
 }
