--- a/packages/api-i18n-content/tsconfig.json
+++ b/packages/api-i18n-content/tsconfig.json
@@ -1,4 +1,17 @@
 {
   "extends": "../../tsconfig",
-  "references": [{ "path": "../graphql" }, { "path": "../api-security" }]
+  "references": [
+    {
+      "path": "../graphql"
+    },
+    {
+      "path": "../api-security"
+    },
+    {
+      "path": "../handler"
+    },
+    {
+      "path": "../api-i18n"
+    }
+  ]
 }
