fix(monolith): do not lock environment

--- a/apps/admin/code/app/package.json
+++ b/apps/admin/code/app/package.json
@@ -14,7 +14,7 @@
 	},
 	"scripts": {
 		"analyze": "source-map-explorer build/static/js/main.*",
-		"start": "webiny run start --env local",
+		"start": "webiny run start",
 		"build": "webiny run build"
 	},
 	"browserslist": {
