--- a/package.json
+++ b/package.json
@@ -5,18 +5,8 @@
       "packages/*",
       "apps/admin/code/app",
       "apps/site/code/app",
-      "api/code/apolloGateway",
-      "api/code/awsDocumentDbProxy",
-      "api/code/mongoAtlasProxy",
-      "api/code/databaseProxy",
-      "api/code/fileManager/*",
-      "api/code/formBuilder",
       "api/code/graphqlPlayground",
-      "api/code/i18n/*",
-      "api/code/settingsManager",
-      "api/code/cms/*",
-      "api/code/pageBuilder/*",
-      "api/code/security/*"
+      "api/code/api"
     ],
     "nohoist": [
       "**/inquirer/**",
