--- a/api/code/security/permissionsManager/tsconfig.json
+++ b/api/code/security/permissionsManager/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "extends": "../../../../tsconfig",
   "references": [
-    { "path": "../../../../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../../../../packages/api-security-permissions-manager" },
-    { "path": "../../../../../packages/api-security-user-management" },
-    { "path": "../../../../../packages/handler" }
+    { "path": "../../../../packages/api-security-permissions-manager" },
+    { "path": "../../../../packages/api-security-user-management" },
+    { "path": "../../../../packages/db-dynamodb" },
+    { "path": "../../../../packages/handler-aws" },
+    { "path": "../../../../packages/handler-db" }
   ]
 }
