--- a/api/code/api/tsconfig.json
+++ b/api/code/api/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../../tsconfig",
+  "extends": "../../../tsconfig",
   "references": [
     { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
     { "path": "../../../../packages/api-security" },
