--- a/packages/api-i18n/tsconfig.build.json
+++ b/packages/api-i18n/tsconfig.build.json
@@ -12,7 +12,8 @@
     "../handler-db",
     "../db-dynamodb",
     "../commodo",
-    "../validation"
+    "../validation",
+    "../handler-http"
   ],
   "compilerOptions": {
     "outDir": "dist",
@@ -20,15 +21,38 @@
     "declarationDir": "dist"
   },
   "references": [
-    { "path": "../api-security/tsconfig.build.json" },
-    { "path": "../graphql/tsconfig.build.json" },
-    { "path": "../handler/tsconfig.build.json" },
-    { "path": "../handler-aws/tsconfig.build.json" },
-    { "path": "../handler-apollo-server/tsconfig.build.json" },
-    { "path": "../handler-client/tsconfig.build.json" },
-    { "path": "../handler-db/tsconfig.build.json" },
-    { "path": "../db-dynamodb/tsconfig.build.json" },
-    { "path": "../commodo/tsconfig.build.json" },
-    { "path": "../validation/tsconfig.build.json" }
+    {
+      "path": "../api-security/tsconfig.build.json"
+    },
+    {
+      "path": "../graphql/tsconfig.build.json"
+    },
+    {
+      "path": "../handler/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-aws/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-apollo-server/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-client/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-db/tsconfig.build.json"
+    },
+    {
+      "path": "../db-dynamodb/tsconfig.build.json"
+    },
+    {
+      "path": "../commodo/tsconfig.build.json"
+    },
+    {
+      "path": "../validation/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-http/tsconfig.build.json"
+    }
   ]
 }
