--- a/packages/handler-ssr/package.json
+++ b/packages/handler-ssr/package.json
@@ -15,11 +15,15 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@webiny/commodo": "^4.13.0",
-    "@webiny/commodo-fields-storage-db-proxy": "^4.13.0",
     "@webiny/handler": "^4.13.0",
     "@webiny/handler-client": "^4.13.0",
     "@webiny/handler-http": "^4.13.0",
+    "@commodo/hooks": "beta",
+    "@commodo/fields": "beta",
+    "@commodo/name": "beta",
+    "commodo-fields-date": "^1.0.7",
+    "commodo-fields-object": "^1.0.6",
+    "repropose": "^1.0.2",
     "got": "^9.6.0",
     "lodash.flow": "^3.5.0",
     "mime-types": "^2.1.26",
