--- a/packages/app-admin/package.json
+++ b/packages/app-admin/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "@editorjs/editorjs": "^2.19.0",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
     "@svgr/webpack": "^4.3.2",
