--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
       "apps/site/code",
       "apps/theme",
       "api/code/graphqlPlayground",
-      "api/code/api"
+      "api/code/api",
+      "api/code/fileManager/*"
     ],
     "nohoist": [
       "**/inquirer/**",
