fix: use `HandlerContext` instead of `Context`

--- a/packages/api-plugin-elastic-search-client/package.json
+++ b/packages/api-plugin-elastic-search-client/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@elastic/elasticsearch": "^7.9.1",
-    "@webiny/graphql": "^4.13.0",
+    "@webiny/handler": "^4.13.0",
     "aws-elasticsearch-connector": "^9.0.0",
     "aws-sdk": "^2.539.0"
   },
