--- a/apps/admin/code/package.json
+++ b/apps/admin/code/package.json
@@ -18,7 +18,7 @@
 	},
 	"scripts": {
 		"analyze": "source-map-explorer build/static/js/main.*",
-		"start": "webiny run start",
+		"start": "webiny run start --env=local",
 		"build": "webiny run build"
 	},
 	"browserslist": {
