--- a/api/code/api/package.json
+++ b/api/code/api/package.json
@@ -5,14 +5,18 @@
 		"build": "webiny run build"
 	},
 	"dependencies": {
-		"@webiny/handler": "^4.13.0",
+		"@webiny/handler-aws": "^4.13.0",
+		"@webiny/api-security-user-management": "^4.13.0",
+		"@webiny/api-i18n": "^4.13.0",
+		"@webiny/api-i18n-content": "^4.13.0",
+		"@webiny/api-page-builder": "^4.13.0",
 		"@webiny/handler-db": "^4.13.0",
+		"@webiny/db-dynamodb": "^4.13.0",
+		"@webiny/api-plugin-elastic-search-client": "^4.13.0",
+		"@webiny/api-file-manager": "^4.13.0",
 		"@webiny/handler-apollo-server": "^4.13.0",
 		"@webiny/api-security": "^4.13.0",
-		"@webiny/api-security-permissions-manager": "^4.13.0",
-		"@webiny/api-security-user-management": "^4.13.0",
 		"@webiny/api-plugin-security-cognito": "^4.13.0",
-		"@webiny/api-settings-manager": "^4.13.0",
 		"@webiny/project-utils": "^4.13.0"
 	}
 }
